fix image not showing error

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
 
       <div class="right">
-        <img class="image" src="/images/hero-desktop.jpg" alt="" />
+        <img class="image" src="images/hero-desktop.jpg" alt="" />
       </div>
     </section>
 
