fix second image error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </svg>
         </div>
         <div class="imagemobile">
-          <img src="/images/hero-mobile.jpg" alt="" />
+          <img src="images/hero-mobile.jpg" alt="" />
         </div>
         <div class="intro">
           <p><span class="">We're</span> coming soon</p>
